--- a/pybootd/etc/pybootd.ini
+++ b/pybootd/etc/pybootd.ini
@@ -5,15 +5,15 @@ level = info
 [bootp]
 address = 0.0.0.0
 ; pool_start should be in a valid subnet
-pool_start = 192.168.25.100
+pool_start = 192.168.86.170
 pool_count = 5
 domain = localdomain
 server_name = debug
 boot_file = pxelinux.0
 lease_time = 86400
-access = mac
+access = http
 allow_simple_dhcp = enable
-dns = 10.130.0.2
+dns = 8.8.8.8
 boot_file = pxelinux.0
 ; use "nc -l -u 127.0.0.1 -p 12345" to debug
 ; notify = 192.168.26.201:12345;192.168.26.200:12345
@@ -26,14 +26,17 @@ boot_file = pxelinux.0
 12345678-abcd-ef00-1111-123412341234 = enable
 
 [http]
-location = 127.0.0.1:13400
+apiurl = http://10.18.8.214:8080/bmiconsole/api/v1/
+apiuser = pybootd
+apikey = MyFacnyApiKeyForAuhtorization
+
 pxe = boot
 dhcp = linux
 
 [tftp]
 ;address = (use address from bootpd)
 ;root = ./images
-root = http://http.us.debian.org/debian/dists/squeeze/main/installer-amd64/current/images/netboot
+root = http://ftp2.de.debian.org/debian/dists/squeeze/main/installer-amd64/current/images/netboot
 
 [filters]
 ;pxelinux.cfg/* = pybootd/etc/pxe.cfg
